<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/parent_container"
            android:layout_width="410dp"
            android:layout_height="400dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="410dp"
                    android:layout_height="400dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="NotSibling"/>

                <Button
                    android:id="@+id/up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="34dp"
                    android:layout_marginEnd="299dp"
                    android:onClick="LewelUpMap"
                    android:text="@string/up"
                    tools:layout_editor_absoluteX="230dp"
                    tools:layout_editor_absoluteY="100dp"
                    tools:ignore="RelativeOverlap" />

                <Button
                    android:id="@+id/down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/up"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="39dp"
                    android:layout_marginEnd="299dp"
                    android:onClick="LewelDownMap"
                    android:text="@string/down"
                    tools:layout_editor_absoluteX="130dp"
                    tools:layout_editor_absoluteY="5dp" />

                <Switch
                    android:id="@+id/zapisać"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:onClick="zmiana_trybu"
                    android:text="@string/zapisa"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
        </RelativeLayout>

        <Button
            android:id="@+id/wypisz"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:onClick="odczytwanie_plik"
            android:text="@string/poka_skany"
            app:layout_constraintBottom_toTopOf="@+id/ekran"
            app:layout_constraintEnd_toStartOf="@+id/skanuj"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/skanuj"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="236dp"
            android:onClick="Operacje_na_pozycji"
            android:text="@string/nagraj_skany"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/ekran"
            android:layout_width="385dp"
            android:layout_height="117dp"
            android:text="@string/skany"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skanuj"
            app:layout_constraintVertical_bias="0.177" />

        <Button
            android:id="@+id/wysyłaj"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_marginTop="35dp"
            android:onClick="wyslij_do_bazy"
            android:text="@string/wysy_aj_skany"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.348"
            app:layout_constraintStart_toEndOf="@+id/kasuj"
            app:layout_constraintTop_toBottomOf="@+id/ekran"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/kasuj"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:onClick="Kasuj_skany"
            android:text="@string/kasuj_skany"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ekran"
            app:layout_constraintVertical_bias="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>